# mbed-edge

./: CMakeLists.txt
WISE-3610-SDK/: mbed_edge_config.h
config/: sotp_fs_linux.h
edge-client/: mbed_cloud_dev_credentials.c  oem_role_claim.cpp  update_default_resources.c
edge-core/: edge_server.c  edge_server_customer_code.c
include/edge-client/: oem_role_claim.h
mbed-edge-module-sources/pal/Source/Port/Reference-Impl/Lib_Specific/mbedTLS/TLS/: pal_plat_TLS.c
mbed-edge-module-sources/pal/Source/Port/Reference-Impl/OS_Specific/Linux/Board_Specific/TARGET_x86_x64/: pal_plat_x86_x64.c
mbed-edge-module-sources/pal/Source/Port/Reference-Impl/OS_Specific/Linux/RTOS/: pal_plat_rtos.c
mbed-edge-module-sources/update-client-hub/modules/pal-linux/source/: arm_uc_pal_linux_generic.c
pt-example_1520/: CMakeLists.txt  README.md  pt_example_1520.c
